--- a/src/main/webapp/css/adminDashboard.css
+++ b/src/main/webapp/css/adminDashboard.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: url('../img/dashboard-bg.jpg') no-repeat center center fixed;
+    background: url('img/kucing1.jpg') no-repeat center center fixed;
     background-size: cover;
     margin: 0;
     padding: 0;
